# nanodet_ir

./: .gitignore  config_masike.yml  demo.py  demo_txt.py  export_onnx  export_onnx.py  mylog-vit2.txt  mylog-vit3.txt  mylog-vit_v1.txt  mylog.txt  mylog2.txt  requirements.txt  search_space.json  test_demo  train.py  train_ss.py  train_start  vit_train_start  实验
config/: nanodet-m-pose.yml  nanodet-m-pose_vit.yml
demo/: demo.py  test_demo
demo_mnn/: CMakeLists.txt  build-1126.sh  build.sh  main.cpp  nanodet_mnn.cpp  nanodet_mnn.hpp  vit.mnn
demo_ncnn/: 0720_build-9211.sh  CMakeLists.txt  build-1126.sh  build-x86.sh  main.cpp  nanodet.cpp  nanodet.h
demo_ncnn/build-9211_0720/: CMakeCache.txt  Makefile  cmake_install.cmake
demo_ncnn/python/: demo_ncnn.py
nanodet/data/dataset/: coco.py  xml_dataset.py
nanodet/data/transform/: color.py
nanodet/model/arch/: one_stage_detector.py
nanodet/model/backbone/: __init__.py  mobile_vit.py  shufflenetv2.py
nanodet/model/head/: gfl_head.py
nanodet/trainer/: task.py  trainer.py
nanodet/util/: det_txt.py  visualization.py
tools/: export_onnx  export_onnx.py  onnx_ncnn  train.py
